--- a/Builder.Template.CSharp/Template/AssemblyInfoTemplate.tt
+++ b/Builder.Template.CSharp/Template/AssemblyInfoTemplate.tt
@@ -16,11 +16,11 @@ using System.Runtime.InteropServices;
 // General Information about an assembly is controlled through the following 
 // set of attributes. Change these attribute values to modify the information
 // associated with an assembly.
-[assembly: AssemblyTitle("<#= _namespaceName #>.Business")]
+[assembly: AssemblyTitle("<#= _namespaceName #>")]
 [assembly: AssemblyDescription("")]
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("<#= _namespaceName #>.Business")]
+[assembly: AssemblyProduct("<#= _namespaceName #>")]
 [assembly: AssemblyCopyright("Copyright ©  <#= DateTime.Now.Year #>")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]
